--- a/HR.Leavemanagament.MVC/Views/Shared/_Layout.cshtml
+++ b/HR.Leavemanagament.MVC/Views/Shared/_Layout.cshtml
@@ -27,6 +27,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="LeaveType" asp-action="Index"> Leave Type</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="LeaveRequest" asp-action="Index"> Leave Request</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="LeaveRequest" asp-action="Index"> Leave Request</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="LeaveAllocation" asp-action="Index"> Leave Allocation</a>
+                        </li>
                     </ul>
                 </div>
             </div>
