--- a/HR.Leavemanagament.MVC/Views/Shared/_Layout.cshtml
+++ b/HR.Leavemanagament.MVC/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                         </li>
                         @if(User.Identity.IsAuthenticated)
                         {
-                            if(User.IsInRole("Administrator"))
+                            if(User.IsInRole("Administractor"))
                             {
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
