Update to use new code for service UI and API

--- a/HR.Leavemanagament.MVC/Views/LeaveAllocation/Details.cshtml
+++ b/HR.Leavemanagament.MVC/Views/LeaveAllocation/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model HR.Leavemanagament.MVC.Models.LeaveAllocationVm
+﻿@model HR.Leavemanagament.MVC.Models.LeaveAllocationVM
 
 @{
     ViewData["Title"] = "Details";
