--- a/HR.Leavemanagament.MVC/Views/LeaveAllocation/Index.cshtml
+++ b/HR.Leavemanagament.MVC/Views/LeaveAllocation/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<HR.Leavemanagament.MVC.Models.LeaveAllocationVm>
+﻿@model IEnumerable<HR.Leavemanagament.MVC.Models.LeaveAllocationVM>
 
 @{
     ViewData["Title"] = "Index";
