--- a/HR.Leavemanagament.MVC/Views/LeaveRequest/Create.cshtml
+++ b/HR.Leavemanagament.MVC/Views/LeaveRequest/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model HR.Leavemanagament.MVC.Models.CreateLeaveRequestVm
+﻿@model HR.Leavemanagament.MVC.Models.CreateLeaveRequestVM
 
 @{
     ViewData["Title"] = "Create";
