--- a/HR.Leavemanagament.MVC/Views/LeaveRequest/Delete.cshtml
+++ b/HR.Leavemanagament.MVC/Views/LeaveRequest/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model HR.Leavemanagament.MVC.Models.LeaveRequestVm
+﻿@model HR.Leavemanagament.MVC.Models.LeaveRequestVM
 
 @{
     ViewData["Title"] = "Delete";
