--- a/HR.Leavemanagament.MVC/Views/LeaveRequest/Edit.cshtml
+++ b/HR.Leavemanagament.MVC/Views/LeaveRequest/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model HR.Leavemanagament.MVC.Models.UpdateLeaveRequestVm
+﻿@model HR.Leavemanagament.MVC.Models.LeaveRequestVM
 
 @{
     ViewData["Title"] = "Edit";
