--- a/HR.Leavemanagament.MVC/Views/LeaveRequest/Index.cshtml
+++ b/HR.Leavemanagament.MVC/Views/LeaveRequest/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<HR.Leavemanagament.MVC.Models.LeaveRequestListVm>
+﻿@model IEnumerable<HR.Leavemanagament.MVC.Models.LeaveRequestVM>
 
 @{
     ViewData["Title"] = "Index";
