--- a/HR.Leavemanagament.MVC/Views/Users/Login.cshtml
+++ b/HR.Leavemanagament.MVC/Views/Users/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model HR.Leavemanagament.MVC.Models.LoginVm
+﻿@model HR.Leavemanagament.MVC.Models.LoginVM
 
 @{
     ViewData["Title"] = "Login";
