--- a/HR.Leavemanagament.MVC/Views/LeaveAllocation/Create.cshtml
+++ b/HR.Leavemanagament.MVC/Views/LeaveAllocation/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model HR.Leavemanagament.MVC.Models.CreateLeaveAllocationVm
+﻿@model HR.Leavemanagament.MVC.Models.CreateLeaveAllocationVM
 
 @{
     ViewData["Title"] = "Create";
@@ -13,19 +13,9 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="NumberOfDays" class="control-label"></label>
-                <input asp-for="NumberOfDays" class="form-control" />
-                <span asp-validation-for="NumberOfDays" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="LeaveTypeId" class="control-label"></label>
                 <input asp-for="LeaveTypeId" class="form-control" />
                 <span asp-validation-for="LeaveTypeId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Period" class="control-label"></label>
-                <input asp-for="Period" class="form-control" />
-                <span asp-validation-for="Period" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
