Update the views

--- a/HR.Leavemanagament.MVC/Views/LeaveType/Create.cshtml
+++ b/HR.Leavemanagament.MVC/Views/LeaveType/Create.cshtml
@@ -4,9 +4,13 @@
     ViewData["Title"] = "Create";
 }
 
+@{
+    ViewData["Title"] = "Create";
+}
+
 <h1>Create</h1>
 
-<h4>CreateLeaveTypeVm</h4>
+<h4>CreateLeaveTypeVM</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
