--- a/HR.Leavemanagament.MVC/Views/LeaveRequest/Create.cshtml
+++ b/HR.Leavemanagament.MVC/Views/LeaveRequest/Create.cshtml
@@ -6,43 +6,51 @@
 
 <h1>Create</h1>
 
-<h4>CreateLeaveRequestVm</h4>
+
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="StartDate" class="control-label"></label>
-                <input asp-for="StartDate" class="form-control" />
-                <span asp-validation-for="StartDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="EndDate" class="control-label"></label>
-                <input asp-for="EndDate" class="form-control" />
-                <span asp-validation-for="EndDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="LeaveTypeId" class="control-label"></label>
-                <input asp-for="LeaveTypeId" class="form-control" />
+                <select asp-for="LeaveTypeId" asp-items="Model.LeaveTypes" class="form-control">
+                    <option>Select Leave Type</option>
+                </select>
                 <span asp-validation-for="LeaveTypeId" class="text-danger"></span>
             </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label asp-for="StartDate" class="control-label"></label>
+                        <input asp-for="StartDate" class="form-control" type="date" />
+                        <span asp-validation-for="StartDate" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label asp-for="EndDate" class="control-label"></label>
+                        <input asp-for="EndDate" class="form-control" type="date" />
+                        <span asp-validation-for="EndDate" class="text-danger"></span>
+                    </div>
+                </div>
+            </div>
+
             <div class="form-group">
                 <label asp-for="RequestComments" class="control-label"></label>
-                <input asp-for="RequestComments" class="form-control" />
+                <textarea asp-for="RequestComments" class="form-control"></textarea>
                 <span asp-validation-for="RequestComments" class="text-danger"></span>
             </div>
+
+
+
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Request Leave" class="btn btn-primary btn-block" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-secondary btn-block" asp-action="Index">Back to List</a>
 </div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
