--- a/HR.Leavemanagament.MVC/Views/Users/Login.cshtml
+++ b/HR.Leavemanagament.MVC/Views/Users/Login.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1>Login</h1>
-<hr />
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Login">
@@ -18,15 +18,20 @@
             </div>
             <div class="form-group">
                 <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
+                <input asp-for="Password" type="password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Log in" class="btn btn-primary" />
+                <input type="submit" value="Login" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
+
+<div>
+    <a asp-action="Index">Back to List</a>
+</div>
+
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
